# politibase

./: .gitignore  README.md  mhd_council_data_scrape.py  pyproject.toml  requirements.txt  run.py  site_scrape_script.py
MoorheadMinutes/: index.js  pdf_to_text.py  result.txt  word_count.py
data/seed/: fm_metro_seed.py
frontend/static/css/: style.css
frontend/static/js/: app.js
frontend/templates/: about.html  base.html  candidate_detail.html  candidates.html  election_detail.html  elections.html  index.html  jurisdiction_detail.html  jurisdictions.html
politibase/: __init__.py  update.py
politibase/api/: __init__.py  main.py  pages.py
politibase/api/routes/: ballot.py  candidates.py  elections.py  jurisdictions.py
politibase/db/: database.py
politibase/models/: __init__.py  schema.py
politibase/scrapers/: __init__.py  base.py  fargo.py  google_civic.py  monitor.py  moorhead.py
