[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "politibase"
version = "0.1.0"
description = "Local election candidate research platform"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.setuptools.packages.find]
include = ["politibase*"]
